feat: documentation
